--- a/lib/rumbl_web/templates/layout/app.html.eex
+++ b/lib/rumbl_web/templates/layout/app.html.eex
@@ -13,10 +13,19 @@
       <section class="container">
         <nav role="navigation">
           <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-          </ul>
+          <%= if @current_user do %>
+            <li><%= @current_user.username %></li>
+            <li>
+              <%= link "Log out",
+                    to: Routes.session_path(@conn, :delete, @current_user),
+                    method: "delete" %>
+            </li>
+          <% else %>
+            <li><%= link "Register", to: Routes.user_path(@conn, :new) %></li>
+            <li><%= link "Log in", to: Routes.session_path(@conn, :new) %></li>
+          <% end %>
         </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
+        <a href="http://phoenixframework.org/" class="phx-logo">
           <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
         </a>
       </section>
