--- a/lib/rumbl_web/templates/user/new.html.eex
+++ b/lib/rumbl_web/templates/user/new.html.eex
@@ -1,7 +1,8 @@
 <h1>New User</h1>
-<%= if @changeset.action do %> <div class="alert alert-danger">
-    <p>Oops, something went wrong! Please check the errors below.</p>
-  </div>
+<%= if @changeset.action do %>
+    <div class="alert alert-danger">
+        <p>Oops, something went wrong! Please check the errors below.</p>
+    </div>
 <% end %>
 
 <%= form_for @changeset, Routes.user_path(@conn, :create), fn f -> %>
