--- a/lib/rumbl_web/templates/video/form.html.eex
+++ b/lib/rumbl_web/templates/video/form.html.eex
@@ -17,6 +17,9 @@
   <%= textarea f, :description %>
   <%= error_tag f, :description %>
 
+  <%= label f, :category_id, "Category", class: "control-label" %>
+  <%= select f, :category_id, @categories, class: "form-control", prompt: "Choose a category" %>
+
   <div>
     <%= submit "Save" %>
   </div>
