--- a/lib/rumbl_web/templates/video/index.html.eex
+++ b/lib/rumbl_web/templates/video/index.html.eex
@@ -18,9 +18,9 @@
       <td><%= video.description %></td>
 
       <td>
-        <span><%= link "Show", to: Routes.video_path(@conn, :show, video) %></span>
-        <span><%= link "Edit", to: Routes.video_path(@conn, :edit, video) %></span>
-        <span><%= link "Delete", to: Routes.video_path(@conn, :delete, video), method: :delete, data: [confirm: "Are you sure?"] %></span>
+        <span><%= link "Watch", to: Routes.watch_path(@conn, :show, video), class: "btn btn-default btn-xs"%></span>
+        <span><%= link "Edit", to: Routes.video_path(@conn, :edit, video), class: "btn btn-default btn-xs"%></span>
+        <span><%= link "Delete", to: Routes.video_path(@conn, :delete, video), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %></span>
       </td>
     </tr>
 <% end %>
