finished chapter 10. Adds video channel to accept new annotations and on join client recieves all annotations for that video

--- a/assets/css/video.css
+++ b/assets/css/video.css
@@ -17,10 +17,12 @@
 
 #msg-container {
   min-height: 190px;
+  max-height: 190px;
   border-top: 1px solid gray;
   border-bottom: 1px solid gray;
   background: white;
   padding: 5px;
+  overflow-y: scroll;
 }
 
 .panel-footer {
